samples/cmdassets/tool-result-20250331-064522-smgnmw.txt
src/streamer.ts:5:13 - error TS2300: Duplicate identifier 'path'.

5 import * as path from 'path';      // For path manipulation
              ~~~~

src/streamer.ts:12:10 - error TS2300: Duplicate identifier 'ensureDirectoryExists'.

12 import { ensureDirectoryExists, writeFile, resolveFilePath, fileExists } from './utils/fileUtils'; // Import file utils
            ~~~~~~~~~~~~~~~~~~~~~

src/streamer.ts:12:33 - error TS2300: Duplicate identifier 'writeFile'.

12 import { ensureDirectoryExists, writeFile, resolveFilePath, fileExists } from './utils/fileUtils'; // Import file utils
                                   ~~~~~~~~~

src/streamer.ts:12:61 - error TS2300: Duplicate identifier 'fileExists'.

12 import { ensureDirectoryExists, writeFile, resolveFilePath, fileExists } from './utils/fileUtils'; // Import file utils
                                                               ~~~~~~~~~~

src/streamer.ts:15:7 - error TS2451: Cannot redeclare block-scoped variable 'LINE_COUNT_THRESHOLD'.

15 const LINE_COUNT_THRESHOLD = 30;
         ~~~~~~~~~~~~~~~~~~~~

src/streamer.ts:16:13 - error TS2300: Duplicate identifier 'path'.

16 import * as path from 'path';
               ~~~~

src/streamer.ts:17:10 - error TS2300: Duplicate identifier 'ensureDirectoryExists'.

17 import { ensureDirectoryExists, writeFile, appendToFile, fileExists, readFileAsText } from './utils/fileUtils';
            ~~~~~~~~~~~~~~~~~~~~~

src/streamer.ts:17:33 - error TS2300: Duplicate identifier 'writeFile'.

17 import { ensureDirectoryExists, writeFile, appendToFile, fileExists, readFileAsText } from './utils/fileUtils';
                                   ~~~~~~~~~

src/streamer.ts:17:44 - error TS2305: Module '"./utils/fileUtils"' has no exported member 'appendToFile'.

17 import { ensureDirectoryExists, writeFile, appendToFile, fileExists, readFileAsText } from './utils/fileUtils';
                                              ~~~~~~~~~~~~

src/streamer.ts:17:58 - error TS2300: Duplicate identifier 'fileExists'.

17 import { ensureDirectoryExists, writeFile, appendToFile, fileExists, readFileAsText } from './utils/fileUtils';
                                                            ~~~~~~~~~~

src/streamer.ts:20:7 - error TS2451: Cannot redeclare block-scoped variable 'LINE_COUNT_THRESHOLD'.

20 const LINE_COUNT_THRESHOLD = 30;
         ~~~~~~~~~~~~~~~~~~~~

src/streamer.ts:413:19 - error TS18048: 'fileContent' is possibly 'undefined'.

413               if (fileContent.endsWith(tokensSoFar)) {
                      ~~~~~~~~~~~

src/streamer.ts:419:47 - error TS18048: 'fileContent' is possibly 'undefined'.

419                 log(`Actual file endsWith: "${fileContent.slice(-50)}"`);
                                                  ~~~~~~~~~~~

src/streamer.ts:540:18 - error TS2367: This comparison appears to be unintentional because the types '"SaveToFile" | "AppendToEditor"' and '"Error"' have no ove
rlap.

540       } else if (action !== 'Error') { // Check action wasn't Error before this final check
                     ~~~~~~~~~~~~~~~~~~

src/streamer.ts:552:21 - error TS2341: Property 'isLocked' is private and only accessible within class 'Lock'.

552       if (this.lock.isLocked) {
                        ~~~~~~~~


Found 15 errors in the same file, starting at: src/streamer.ts:5

---

status = process exited
cwd = /Users/arusia/repos/filechat